--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
           <div class="col-md-12">
 		   
             <div class="top_left_cont intro zoomIn wow animated"> 
-              <h2>I AM ANDEY<br> <strong>CREATIVE DESIGNER</strong></h2>
+              <h2>I AM Atikur Rahman<br> <strong>Web Developer</strong></h2>
               <p>
-			  I am Andey Markus, from planet with a passion of Web, Graphic and Interactive design. <br/>
+			  I am Atikur Rahman, from planet with a passion of Web,  web design. <br/>
 			  I specialise in standards compliant websites with a focus on usability. <br/>
               Enthusiastic about life, design and innovation. </p>
                 <div class="underline"></div>             
