--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, maximum-scale=1">
-<title>Andey Portfolio HTML5 Template | Webthemez</title>
+<title>Atikur | Portfolio</title>
 <link rel="icon" href="favicon.png" type="image/png">
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
@@ -29,11 +29,8 @@
           <div class="col-md-12">
 		   
             <div class="top_left_cont intro zoomIn wow animated"> 
-              <h2>I AM Atikur Rahman<br> <strong>Web Developer</strong></h2>
-              <p>
-			  I am Atikur Rahman, from planet with a passion of Web,  web design. <br/>
-			  I specialise in standards compliant websites with a focus on usability. <br/>
-              Enthusiastic about life, design and innovation. </p>
+              <h2>I am Atikur Rahman<br> <strong>Web Developer</strong></h2>
+              <p>I am Atikur Rahman, from planet with a passion of Web,  web design. <br/>I specialise in standards compliant websites with a focus on usability. <br/>Enthusiastic about life, design and innovation. </p>
                 <div class="underline"></div>             
               <ul class="social_links">
             <li class="twitter animated bounceIn wow delay-02s animated" style="visibility: visible; animation-name: bounceIn;"><a href="javascript:void(0)"><i class="fa fa-twitter"></i></a></li>
